# canister-template

./: rust-toolchain.toml
src/: Cargo.toml  package-lock.json  package.json  sh_generate.sh  sh_package.sh  sh_publish.sh  sh_setup_dev.sh
src/canisters/api_mock_canister/: Cargo.toml
src/canisters/api_mock_canister/src/: actor.did  actor.rs  errors.rs  mock_utils.rs  state.rs
src/canisters/api_mock_icnaming/: Cargo.toml
src/canisters/api_mock_icnaming/src/: actor.rs  lib.rs  state.rs  user_quota_store.rs
src/common/build_common/: Cargo.toml
src/common/build_common/src/: lib.rs
src/common/common/: Cargo.toml
src/common/common/src/: canister_api.rs  constants.rs  dto.rs  errors.rs  ic_ledger_types.rs  ic_logger.rs  lib.rs  named_canister_ids.rs  permissions.rs
src/common/common/src/canister_api/: ic_impl.rs  mod.rs
src/common/common/src/constants/: tests.rs
src/common/common/src/dto/: tests.rs
src/common/common/src/types/: ic_management_types.rs  mod.rs
src/common/common_actor/: Cargo.toml  build.rs
src/common/common_actor/src/: actor.rs
src/common/test_common/: Cargo.toml
src/common/test_common/src/: canister_api.rs  lib.rs  user.rs
src/scripts/: updateLocalConfigs.ts
