[package]
name = "api_mock_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.16.0"
ic-cdk-macros = "0.16.0"
candid = "0.10.0"
serde = "1.0.147"
serde_bytes = "0.11"
log = "0.4"
common = { path = "../../common/common"}
thiserror = "1.0"
anyhow = "1.0.66"

[dev-dependencies]
test_common = { path = "../../common/test_common" }
async-std = { version = "1.12", features = ["attributes"] }
