[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.6.4"
ic-cdk-macros = "0.6.4"
candid = "0.8.3"
serde = "1.0.147"
serde_bytes = "0.11"
anyhow = "1.0.66"
thiserror = "1.0"
log = "0.4"
async-trait = "0.1.58"
url = "2.3.1"
num-bigint = "0.4.3"
yansi = "0.5.1"
once_cell = "1.16"
flate2 = "1.0"
const_env = "0.1.2"
sha2 = "0.10.6"
hex = "0.4.3"
crc32fast = "1.3.2"

[dev-dependencies]
env_logger = "0.11.0"
rstest = "0.15.0"

[build-dependencies]
anyhow = "1.0.66"
build_common = { path = "../build_common" }
