[package]
name = "test_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.16.0"
ic-cdk-macros = "0.16.0"
candid = "0.10.0"
serde = "1.0.147"
serde_bytes = "0.11"
common = { path = "../common" }
log = "0.4"
env_logger = "0.11.0"
mockall = "0.13.0"
async-trait = "0.1.58"
rstest = "0.23.0"
hex = "0.4.3"
crc32fast = "1.3.2"
